# rust_olc_pge

./: .gitignore  Cargo.toml  README.md  asyncify.md  plan.html  plan.md  profile.json  test.blend  test.blend1
src/: camera.rs  decal.rs  engine.rs  game.rs  game_object.rs  geometry.rs  gltf_ext.rs  layer.rs  layer.wgsl  lib.rs  main.rs  math_3d.rs  math_4d.rs  math_nd.rs  olc.rs  persp.frag  persp.frag.spv  persp.vert  persp.vert.spv  persp.wgsl  pixel.rs  platform.rs  render.rs  renderer.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  sprite.rs  texture.rs  transform.rs  util.rs
src/olc/: gl_const.rs
src/olc_engine/: engine.rs  mod.rs
src/shaders/: default_postprocess.wgsl  indexed.wgsl
